--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background: #eeeeee;
+    margin: 0;
 }
 
 img {
@@ -7,7 +8,7 @@ img {
 }
 #mostrador {
     margin: auto;
-    margin-top: 40px;
+    margin-top: 120px;
     width: 252px;
     height: 80px;
 }
@@ -35,6 +36,7 @@ button {
     width: 100px;
     padding: 10px 20px;
     border-radius: 5px;
+    margin-top: 20px;
 
     color: white;
     background-color: #00bfff;
@@ -45,4 +47,18 @@ button {
 
 button:hover {
     background-color: #0077ff;
+}
+
+footer {
+    width: 100%;
+    padding: 1rem;
+
+    background: #292929;
+    color: #ffffff;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+
+    justify-content: center;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
 }
